# yandex-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.ru.md  docker-compose.yml  main.py  pyproject.toml  server.py
docs/: mcp-cli-testing.md  openclaw-quickstart.md  yandex-direct-api-v5-gap-analysis.md  yandex-direct-api-v5-research.md
docs/examples/: openclaw-config-oauth.json  openclaw-config-sse.json  openclaw-config.json
docs/plans/: 2026-02-28-yandex-direct-api-gap-analysis.md  oauth-implementation-plan.md  openclaw-integration-plan.md  openclaw-integration-summary.md
examples/: openclaw-config-sse.json
tests/: conftest.py  test_oauth.py  test_package.py
yandex_mcp/: __init__.py  __main__.py  cli.py  client.py  config.py  oauth.py  token_storage.py
yandex_mcp/formatters/: direct.py  wordstat.py
yandex_mcp/models/: direct.py  direct_extended.py  wordstat.py
yandex_mcp/tools/: __init__.py  oauth.py  wordstat.py
yandex_mcp/tools/direct/: __init__.py  adextensions.py  adgroups.py  advideos.py  agency_clients.py  bidmodifiers.py  campaigns.py  clients.py  creatives.py  dynamic_text_ad_targets.py  images.py  keywords.py  lead_forms.py  stats.py  turbo_pages.py  video_ads.py
yandex_mcp/tools/metrika/: labels.py  offline.py
